[gd_scene load_steps=2 format=3 uid="uid://f8x7y0q5n3j4w"]

[ext_resource type="Script" path="res://src/ui/screens/campaign/phases/BattleResolutionPhasePanel.gd" id="1_y4r2p"]

[node name="BattleResolutionPhasePanel" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y4r2p")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Battle Resolution Phase"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="BattleSummary" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Loading battle summary..."
fit_content = true

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ObjectivesLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Mission Objectives"
horizontal_alignment = 1

[node name="ObjectivesList" type="ItemList" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
auto_height = true

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="CasualtiesLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Casualties and Injuries"
horizontal_alignment = 1

[node name="CasualtiesList" type="ItemList" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
auto_height = true

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="RewardsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Rewards and Loot"
horizontal_alignment = 1

[node name="RewardsList" type="ItemList" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
auto_height = true

[node name="HSeparator5" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="CompleteButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Complete Battle" 